kubernetes/apps/base/network/external-services/postgres-vector-main.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app postgres-vector-main
  annotations:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
      name: postgres
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app postgres-vector-main
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: ${SECRET_PGVECTOREXT_IP}
    ports:
      - port: 5432
        protocol: TCP
        name: postgres
