kubernetes/apps/base/network/external-services/openwebui-temp.yaml
# SECRET_AI1_IP:8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app openwebui-temp
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames:
    - openwebui-temp.${SECRET_MAIN_DOMAIN_NAME}
  parentRefs:
    - name: main
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: openwebui-temp
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: &app openwebui-temp
  annotations:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: openwebui
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app openwebui-temp
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: ${SECRET_AI1_IP}
    ports:
      - port: 8080
        protocol: TCP
        name: openwebui
