kubernetes/apps/base/network/external-services/s3-backup.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app s3-backup
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames:
    - s3-backup.${DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: minio-backup
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app minio-backup
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames:
    - minio-backup.${DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: minio-backup
          port: 9001
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio-backup
  annotations:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - port: 9001
      protocol: TCP
      targetPort: 9001
      name: minio
    - port: 9000
      protocol: TCP
      targetPort: 9000
      name: s3
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app minio-backup
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: ${SECRET_S3_BACKUP_STORAGE_IP}
    ports:
      - port: 9001
        protocol: TCP
        name: minio
      - port: 9000
        protocol: TCP
        name: s3
